--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ reportlab>=4.2
 django-cors-headers>=4.4
 apscheduler>=3.10
 PyPDF2>=3.0
+dj-database-url>=2.1
+gunicorn>=21.2
 # Optionnels:
 # pywin32>=306           # notifications Outlook locales (Windows seulement)
 # psycopg2-binary>=2.9   # si vous passez à PostgreSQL
