--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,3 +91,67 @@ jobs:
           file: frontend/Dockerfile.prod
           push: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
           tags: ghcr.io/${{ github.repository }}/frontend:latest
+
+  e2e:
+    name: E2E (Playwright)
+    runs-on: ubuntu-latest
+    needs: [backend, frontend]
+    services:
+      db:
+        image: postgres:15
+        env:
+          POSTGRES_DB: paa
+          POSTGRES_USER: paa
+          POSTGRES_PASSWORD: paa
+        ports: ['5432:5432']
+        options: >-
+          --health-cmd="pg_isready -U paa -d paa" --health-interval=10s --health-timeout=5s --health-retries=5
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          cache: 'pip'
+      - name: Install backend deps
+        run: |
+          pip install -r requirements.txt
+          pip install gunicorn
+      - name: Migrate + seed
+        env:
+          DATABASE_URL: postgres://paa:paa@localhost:5432/paa
+        run: |
+          python manage.py migrate --noinput
+          python manage.py seed_demo
+      - name: Run backend (gunicorn)
+        env:
+          DATABASE_URL: postgres://paa:paa@localhost:5432/paa
+          DJANGO_SETTINGS_MODULE: config.settings
+          DJANGO_DEBUG: '0'
+          ALLOWED_HOSTS: '*'
+          CORS_ALLOWED_ORIGINS: 'http://localhost:5173'
+        run: |
+          nohup gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 2 --timeout 60 &
+          sleep 3
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
+      - name: Install frontend deps
+        working-directory: frontend
+        run: npm ci
+      - name: Install Playwright
+        working-directory: frontend
+        run: npx playwright install --with-deps
+      - name: Run dev server
+        working-directory: frontend
+        env:
+          VITE_API_URL: 'http://localhost:8000/api'
+        run: |
+          nohup npm run dev -- --host 0.0.0.0 >/dev/null 2>&1 &
+          sleep 3
+      - name: E2E tests
+        working-directory: frontend
+        env:
+          E2E_BASE_URL: 'http://localhost:5173'
+        run: npm run e2e
